
* Upgraded to scons-2.1.0

To documentation:

* Python API documented with Epydoc
* Limited the number of USED IN examples displayed by selfdoc and man
 pages (25 by default, controled by -u parameter in sfdoc)
* book/tutorial: A brief introduction to Madagascar (Jeff Godwin)
* Added selfdoc for sfomp and sfmpi

To APIs:

* librsfsegy / rsfsegy.h as a separate library

To the Python package:

To programs:

* sfgrey4: generate movie of 3-D cube plots.
* sfungrad: phase unwrapping by least squares.
* sfhistogram now takes integer input as well
* sfhist2: 2-D float with integer or float inputs
* in-core large-file (>2Gb) support in sfwindow and sftransp
* sfsparsify: put nonzero elements of 2-D array into sparse form
* sfmoveout: put spikes at an arbitrary moveout.
* sfcconv: 1-D convolution with complex numbers.
* sfpyramid: pyramid transform.
* sfshapeagc: automatic gain control by shaping regularization.
* modified sfsuwrite for consistency with sfsuread
* user/chen: new contributor (Zhonghuan Chen)
* sffoldplot: build a seismic fold map
* tkvpconvert: GUI for vpconvert

===Bug fixes===

In the reproducible documents collection:

In documentation:

* Included previously undocumented parameters (dash,plotcol,plotfat)
  in stdplot.

In APIs:

In the Python package:
* Hires Bounding Box detection in Mathematica plots
* Location of config.py in configure.py 
* Prevent segfault when the input file is closed prematurely.

In programs:
* Fixed sfpen (via dovplot) bug
* Fixed sflosignoi bug
* Fixed sfdots axis-positioning bug
* Fixed sfmath crash when datapath was specified
* Fixed handling of infinite values in sfgraph
* Fixed handling of different output size in sfiwarp
* Fixed sftransp off-core I/O bug 

In the build system:
* Fixed bug that resulted in BLAS/ATLAS-based programs to not install in Fedora
* Eliminated hardcoded paths that made it impossible to package m8r
* Workaround for SCons bug #1488 