@@ -19,7 +19,7 @@
 # Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 
 # check $RSFFIGS
-if (! $?RSFFIGS) setenv RSFFIGS $RSFROOT/share/madagascar-figs
+if (! $?RSFFIGS) setenv RSFFIGS $RSFROOT/share/madagascar/figs
 
 # list the examples
 echo "+++++++ Listing selected examples +++++++"
