@@ -3,9 +3,24 @@ skiplist =  [
 		'book/slim/geo2008NewInsightsPareto/geop',      # Matlab not installed
                 'book/slim/slimUserManual/sffdct',              # PyCurvelab not installed
                 'book/rsf/programming/svd',                     # SciPy not installed
+                'book/rsf/rsf/sfenvelope',                      # SU not installed
 
-                                                                # Examples that run more than 2 minutes
+								# Examples with movies
+		'book/rsf/rsf/fractal',
+		'book/rsf/rsf/sfawefd',
+		'book/rsf/su/rsflab5',
+		'book/swag/waveds/svmod',
+		'book/trip/hpcss/test2',
+		'book/trip/hpcss/test1',	
+		'book/jsg/lpf/regr',
+		'book/geo384w/hw5/hyper2',
+                'book/geo384w/hw1/wave',
+                'book/cwp/geo2009VTIModeSeparation/separate2',
+                'book/cwp/geo2006TimeShiftImagingCondition/icomp',
+                'book/cwp/geo2008InterferometricImagingCondition/circle',
+                                             # Examples that run more than 2 minutes
                 'book/bei/vela/vscan',
+                'cwp/geo2009VTIModeSeparation/separate5',
                 'book/cwp/geo2006TimeShiftImagingCondition/zicig',
                 'book/cwp/geo2006TimeShiftImagingCondition/flat',
                 'book/cwp/geo2008NumericWEMVAoperators/flatWEMVA',
